src/Beastiepedia/Content.module.css
.preview {
  height: 100%;
  width: 40%;
  float: left;
  overflow-y: auto;
}

.info {
  height: 100%;
  width: 60%;
  float: left;
  overflow-y: auto;
}

.inner {
  width: 95%;
  /* height: 95%; */
  margin-top: 2.5%;
  margin-left: 2.5%;
}

.canvasconcon {
  display: flex;
  width: 100%;
  justify-content: center;
}

.canvascon {
  clip-path: polygon(0 0, calc(100% - 20px) 0, 100% 100%, 20px 100%);
  padding: 0 20px 0 20px;
  background-image: repeating-linear-gradient(
    #ddd1bd,
    #ddd1bd 4px,
    #d5c9b5 4px,
    #d5c9b5 8px
  );
  animation-name: bg-scroll;
  animation-duration: 2s;
  animation-iteration-count: infinite;
  animation-timing-function: linear;
  width: 100%;
}

.previewcanvas {
  width: 100%;
  height: auto;
  resize: horizontal;
}

.canvasfailed {
  width: 100%;
  aspect-ratio: 1;
  display: flex;
  justify-content: center;
  align-items: center;
}

.canvasfailed div {
  text-align: center;
}

.varcontainer {
  width: fit-content;
  position: relative;
  top: -4px;
  color: black;
  background-image: repeating-linear-gradient(
    #ddd1bd,
    #ddd1bd 4px,
    #d5c9b5 4px,
    #d5c9b5 8px
  );
  animation-name: bg-scroll;
  animation-duration: 2s;
  animation-iteration-count: infinite;
  animation-timing-function: linear;
  padding-top: 4px;
  padding-bottom: 6px;
  clip-path: polygon(0 0, calc(100% - 5px) 0, 100% 100%, 5px 100%);
  margin-bottom: 10px;
}

@keyframes bg-scroll {
  0% {
    background-position-y: -2px;
  }

  100% {
    background-position-y: -10px;
  }
}

.header {
  width: fit-content;
  position: relative;
  left: 10px;
  color: white;
  padding: 4px 12px 4px 12px;
  background-image: repeating-linear-gradient(
    135deg,
    #000000,
    #000000 10px,
    #2e2e2e 10px,
    #2e2e2e 20px
  );
  clip-path: polygon(0 0, calc(100% - 4px) 0, 100% 100%, 4px 100%);
  z-index: 1;
}

.value {
  width: fit-content;
  margin-left: 20px;
  margin-right: 20px;
}

.middlealign {
  display: flex;
  align-items: center;
}

@media all and (max-aspect-ratio: 4/6) {
  .preview {
    width: 100%;
    height: fit-content;
  }

  .info {
    width: 100%;
    height: fit-content;
  }
}

